# agrobot_corn

./: .gitignore  README.md  compose.sh  update.sh
.github/: pull_request_template.md
.github/workflows/: docker_image.yml
agrobot_ws/src/agrobot_actuation/: CMakeLists.txt  package.xml  setup.py
agrobot_ws/src/agrobot_actuation/agrobot_actuation/: motor_node.py
agrobot_ws/src/agrobot_bringup/: package.xml  setup.py
agrobot_ws/src/agrobot_fsm/: package.xml  setup.cfg  setup.py
agrobot_ws/src/agrobot_interfaces/: CMakeLists.txt  (+1 more)
agrobot_ws/src/agrobot_navigation/: package.xml  setup.py
agrobot_ws/src/agrobot_navigation/agrobot_navigation/: drive_controller.py  mock_tof_sensor.py  roboclaw_test.py  roboclaw_wrapper.py  test_center.py  test_drive_controller.py  test_drive_straight.py  test_turn.py  wheeldriver.py  wheels.py
agrobot_ws/src/agrobot_navigation/launch/: agrobot_navigation.launch.py
base_scripts/: base_launch.sh  robot_launch.sh  rover_launch.sh  setup_ssh.sh
base_scripts/tmuxp/: base_launch.yaml  robot_dev.yaml  robot_launch.yaml
base_scripts/tools/: base_common.sh  docker_sync.sh  git_sync.sh  setup_git.sh
docker/: Dockerfile  Dockerfile.roboclaw  docker-compose.yaml  run_roboclaw.sh
docker/roboclaw/: roboclaw_entrypoint.sh
docker/startup/: entrypoint.sh  introduction.txt
docker/udev/: 99-agrobot.rules
firmware/options/: upload.sh
firmware/teensy_pio/: platformio.ini  upload.sh
roboclaw_container/: Dockerfile  docker-compose.yaml
scripts/: key_teleop.sh  msg_sync.sh  run_agent.sh  start_task.sh  start_video_stream.sh
(+68 files in other folders)
