<?xml version="1.0"?>
<package format="3">
  <name>agrobot_actuation</name>
  <version>0.0.1</version>
  <description>Actuation node (stepper + servo) with service trigger</description>
  <maintainer email="you@example.com">steffan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
</package>