<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agrobot_navigation</name>
  <version>0.0.1</version>
  <description>Navigation system for the BYU Agrobotics Team</description>
  <maintainer email="snelsondurrant@gmail.com">Nelson Durrant</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>agrobot_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-simple-pid</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
